# edukate-gateway/src/main/kotlin/io/github/sanyavertolet/edukate/gateway/dtos/ForgotPasswordRequest.kt
@@ -1,0 +1,6 @@
+package io.github.sanyavertolet.edukate.gateway.dtos
+
+import jakarta.validation.constraints.Email
+import jakarta.validation.constraints.NotBlank
+
+data class ForgotPasswordRequest(@field:NotBlank @field:Email val email: String)
